<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".presentation.Activity.FlashCardListActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="99dp"
        android:layout_height="85dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/Title"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/decks_icon" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/viewCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foregroundGravity="center_horizontal"
        android:padding="0dp"
        android:scaleType="fitXY"
        app:backgroundTint="@android:color/holo_red_light"
        app:borderWidth="0dp"
        app:fabCustomSize="@dimen/fab_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addCard"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flashcardList"
        app:layout_constraintVertical_bias="0.511"
        app:srcCompat="@drawable/ic_visibility_black_24dp" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"

        android:focusable="true"
        android:padding="0dp"
        android:scaleType="fitXY"
        app:backgroundTint="@android:color/holo_red_light"
        app:borderWidth="0dp"
        app:fabCustomSize="@dimen/fab_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flashcardList"
        app:layout_constraintVertical_bias="0.511"
        app:srcCompat="@drawable/addcardiconselected" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/exitFlashList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"

        android:padding="0dp"
        android:scaleType="fitXY"
        app:backgroundTint="@android:color/holo_red_light"
        app:borderWidth="0dp"
        app:fabCustomSize="@dimen/fab_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flashcardList"
        app:layout_constraintVertical_bias="0.511"
        app:srcCompat="@drawable/ic_arrow_back_white_24dp" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/deck_title"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/flashcardList"
        android:layout_width="629dp"
        android:layout_height="634dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:animateLayoutChanges="false"
        android:animationCache="false"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        app:layout_constraintVertical_bias="0.199" />

</android.support.constraint.ConstraintLayout>